--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -8,10 +8,10 @@
 @inject IHtmlLocalizer<SharedResources> SharedHtmlLocalizer
 
 @{
-    var baseUrl = "https://localhost:7045";
+    var baseUrl = "https://dopomoga.ge";
     var urlMedia = $"{baseUrl}/Categories/Media/1";
     var urlBlog = $"{baseUrl}/Categories/Blog/1";
-    var urlThirdCard = $"https://localhost:7045/Categories/Valunteers/1";
+    var urlThirdCard = $"{baseUrl}/Categories/Valunteers/1";
 }
 
 <style>
