--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -374,11 +374,19 @@
                                 </a>
                             </div>
                         }
-                        else
+                        else if(Model.Culture == "uk")
                         {
                             <div class="card-transparent mb-2" style="margin-top:20px;">
                                 <a href="@urlBlog" style=" text-decoration: none;">
                                     <img class="card-img-top side-card-size" src="/content/images/Blogs_Ukrainian.png" alt="Card image cap" style="height:200px;">
+                                </a>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="card-transparent mb-2" style="margin-top:20px;">
+                                <a href="@urlBlog" style=" text-decoration: none;">
+                                    <img class="card-img-top side-card-size" src="/content/images/Blogs_English.png" alt="Card image cap" style="height:200px;">
                                 </a>
                             </div>
                         }
@@ -391,7 +399,7 @@
                                 </a>
                             </div>
                         }
-                        else
+                        else if(Model.Culture == "uk")
                         {
                             <div class="card-transparent mb-2" style="margin-top:20px;">
                                 <a href="@urlMedia" style=" text-decoration: none;">
@@ -399,23 +407,39 @@
                                 </a>
                             </div>
                         }
-                        @*search suka for main posts under videos*@
-                        @*@if (Model.Culture == "en")
-                        {*@
+                        else
+                        {
+                            <div class="card-transparent mb-2" style="margin-top:20px;">
+                                <a href="@urlMedia" style=" text-decoration: none;">
+                                    <img class="card-img-top" src="/content/images/Videos_English.png" alt="Card image cap" style="height:200px;">
+                                </a>
+                            </div>
+                        }
+
+                        @if (Model.Culture == "en")
+                        {
                             <div class="card-transparent mb-2" style="margin-top:20px;">
                                 <a href="@urlThirdCard" style=" text-decoration: none;">
                                     <img class="card-img-top" src="/content/images/cards3.png" alt="Card image cap" style="height:200px;">
                                 </a>
                             </div>
-                        @*}
+                        }
+                        else if(Model.Culture == "uk")
+                        {
+                            <div class="card-transparent mb-2" style="margin-top:20px;">
+                                <a href="@urlMedia" style=" text-decoration: none;">
+                                    <img class="card-img-top" src="/content/images/cards3_Ukrainian.png" alt="Card image cap" style="height:200px;">
+                                </a>
+                            </div>
+                        }
                         else
                         {
                             <div class="card-transparent mb-2" style="margin-top:20px;">
                                 <a href="@urlMedia" style=" text-decoration: none;">
-                                    <img class="card-img-top" src="/content/images/Videos_Ukrainian.png" alt="Card image cap" style="height:200px;">
+                                    <img class="card-img-top" src="/content/images/cards3_English.png" alt="Card image cap" style="height:200px;">
                                 </a>
                             </div>
-                        }*@
+                        }
 
                         
                     </div>
