fix: resolve wrong redirect url generation on index cards

--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -427,7 +427,7 @@
                         else if(Model.Culture == "uk")
                         {
                             <div class="card-transparent mb-2" style="margin-top:20px;">
-                                <a href="@urlMedia" style=" text-decoration: none;">
+                                <a href="@urlThirdCard" style=" text-decoration: none;">
                                     <img class="card-img-top" src="/content/images/cards3_Ukrainian.png" alt="Card image cap" style="height:200px;">
                                 </a>
                             </div>
@@ -435,7 +435,7 @@
                         else
                         {
                             <div class="card-transparent mb-2" style="margin-top:20px;">
-                                <a href="@urlMedia" style=" text-decoration: none;">
+                                <a href="@urlThirdCard" style=" text-decoration: none;">
                                     <img class="card-img-top" src="/content/images/cards3_English.png" alt="Card image cap" style="height:200px;">
                                 </a>
                             </div>
